fix overflow issue

--- a/styles/_home_screen.scss
+++ b/styles/_home_screen.scss
@@ -44,6 +44,6 @@
 @media only screen and (max-width: 800px) and (min-width: 0px) {
   .home-container {
     grid-template-columns: 1fr 60% 1fr;
-    grid-template-rows: 160px 50px 800px 100px;
+    grid-template-rows: 160px 50px 1200px 100px;
   }
 }
