--- a/styles/_pitch.scss
+++ b/styles/_pitch.scss
@@ -121,7 +121,7 @@
     font-size: 16pt;
   }
   .pitch {
-    grid-template-rows: 350px 400px 350px;
+    grid-template-rows: 350px 400px 500px;
   }
 }
 
